change manual trigger

--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -1,13 +1,10 @@
 name: Auto commit
 
-on:
+on: workflow_dispatch
 
   push:
     branches:
       - master
-      
-  schedule:
-  - cron: "*/5 * * * *"
 
 jobs:
   auto_commit:
