change manual trigger 3

--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -20,6 +20,7 @@ jobs:
           
       - name: Commit changes
         run: |
+          git config --local user.email "ari.ardianto@students.amikom.ac.id"
           git config --local user.name "aarzaary"
           git add -A
           
