--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -1,6 +1,13 @@
 name: Auto commit
 
-on: workflow_dispatch
+on:
+
+  push:
+    branches:
+      - master
+      
+  schedule:
+  - cron: "* * * * *" # See https://crontab.guru/#0_7,9,11_*_*_1,3                                                 
 
 jobs:
   auto_commit:
@@ -24,7 +31,7 @@ jobs:
           git config --local user.name "aarzaary"
           git add -A
           
-          d=`date '+%Y-%m-%dT%H:%M:%SZ'`
+          d=`date '+%Y-%m-%d %H:%M:%S'`
                     
           git commit -m "Auto commit at $d"
           
