--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -7,7 +7,7 @@ on:
       - master
       
   schedule:
-  - cron: "* * * * *"                                               
+  - cron: "*/15 * * * *"                                               
 
 jobs:
   auto_commit:
