--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -7,7 +7,7 @@ on:
       - master
       
   schedule:
-  - cron: "*/15 * * * *"                                               
+  - cron: "0 0 * * *"                                               
 
 jobs:
   auto_commit:
@@ -27,7 +27,6 @@ jobs:
           
       - name: Commit changes
         run: |
-          git config --local user.email "ari.ardianto@students.amikom.ac.id"
           git config --local user.name "aarzaary"
           git add -A
           
