--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -38,5 +38,6 @@ jobs:
       - name: GitHub Push
         uses: ad-m/github-push-action@v0.6.0
         with:
+          node-version: '20.x'
           directory: "."
           github_token: ${{ secrets.GITHUB_TOKEN }}
