--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -13,6 +13,10 @@ jobs:
   auto_commit:
     runs-on: ubuntu-latest
     steps:
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
       - name: DEBUG 
         run: echo "::debug::Ref = ${{github.ref}}"
       - uses: actions/checkout@v4
