--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -7,7 +7,7 @@ on:
       - master
       
   schedule:
-  - cron: "0 2 * * *"                                               
+  - cron: "5 3 * * *"                                               
 
 jobs:
   auto_commit:
@@ -28,6 +28,7 @@ jobs:
       - name: Commit changes
         run: |
           git config --local user.name "aarzaary"
+          git config --local user.email "ari.ardianto@students.amikom.ac.id"
           git add -A
           
           d=`date '+%Y-%m-%d %H:%M:%S'`
